fixed issue where Nav wouldn't wrap when screen reduced

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -35,15 +35,18 @@ header{
 .links {
     display: flex;
     background-color: #295877;
-    /* justify-content: center;
-    flex-wrap: wrap; */
+    justify-content: center;
+    flex-wrap: wrap;
     
+}
+.dropbtn{
+    visibility: hidden;
 }
 
 nav ul{
 display: flex;
 flex: 3;
-  justify-content: space-evenly;
+  justify-content: center;
   min-width: 1000px;
   flex-wrap: wrap;
   
@@ -178,3 +181,7 @@ footer{
     color: snow;
 }
 
+@media (max-witdth: 900px){
+
+ 
+}
